use new graphite

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 
 statsd {
-  host = "10.10.40.82"
+  host = "graphite3.dawanda.services"
   host = ${?STATSD_HOST}
   port = 8125
   prefix = "sqltap."
