--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,6 +3,5 @@ statsd {
   host = "graphite3.dawanda.services"
   host = ${?STATSD_HOST}
   port = 8125
-  prefix = "sqltap."
-  hostpfx = ${?HOSTNAME}
+  prefix = "sqltap.${?HOSTNAME}."
 }
