--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,5 +3,5 @@ statsd {
   host = "graphite3.dawanda.services"
   host = ${?STATSD_HOST}
   port = 8125
-  prefix = "sqltap.${?HOSTNAME}."
+  prefix = "sqltap."${?HOSTNAME}
 }
